# JIRA-ticketing-sys

./: CMakeLists.txt  Project-tree.txt  cleandebugAgain.bat  merge_cpp_files.bat
include/: DatabaseManager.hpp  LoginScreen.hpp  RetroTUI.hpp  ScrumJiraApp.hpp  SprintManager.hpp  TicketManager.hpp  UIManager.hpp  UserManager.hpp  board.hpp  db.hpp  input.hpp  models.hpp
src/: DatabaseManager.cpp  RetroTUI.cpp  ScrumJiraApp.cpp  SprintManager.cpp  TicketManager.cpp  UIManager.cpp  UserManager.cpp  db.cpp  main.cpp
